<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.DriverApp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.DriverApp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.DriverApp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_freerides"
        android:name="com.example.DriverApp.ui.freerides.FreeRidesFragment"
        android:label="FreeRides"
        tools:layout="@layout/fragment_freerides" />
    <activity
        android:id="@+id/nav_sets"
        android:name="com.example.DriverApp.SettingsActivity"
        android:label="SettingsActivity" />
    <activity
        android:id="@+id/nav_sign"
        android:name="com.example.DriverApp.StartActivity"
        android:label="activity_start"
        tools:layout="@layout/activity_start" />


</navigation>